--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/fav.png" type="image/x-icon">
     <title>Travel Agency</title>
 </head>
 <body>
@@ -14,9 +15,128 @@
         <i class="fa-solid fa-circle-arrow-right button-icon"></i>
         <p class="button">SEE MORE</p>
      </div> -->
-
-
-
+     <!-- Nav -->
+      <main class="full-size bg-grad-col nav-box">
+        <div class="nav-logo-res">
+          <div class="nav-logo">
+            <a href="index.html"><img class="nav-logo-img" src="assets/fav.png" alt=""></a>
+          </div>
+        </div>
+        <div class="res-nav-list-box">
+            <div class="nav-list-box">
+              <div class="nav-list">
+                <a class="nav-btn" href="">HOME</a>
+                <a class="nav-btn" href="">DESTINATIONS</a>
+                <a class="nav-btn" href="">GALLERY</a>
+                <a class="nav-btn" href="">PACKAGES</a>
+                <a class="nav-btn" href="">BOOKING</a>
+                <a class="nav-btn" href="">TESTIMONIAL</a>
+                <a class="nav-btn" href="">ABOUT</a>
+                <a class="nav-btn" href="">CONTACT</a>
+                <a class="nav-btn" href="">FAQ</a>
+              </div>
+            </div>
+        </div>
+      </main>   
+      <!-- Header -->
+       <main class="full-size header-box">
+        <div class="content-header">
+          <h1 class="header-title">Travel Agency</h1>
+          <p class="header-info">EXPLORE THE WORLD</p>
+            <div class="button-bg">
+          <i class="fa-solid fa-circle-arrow-right button-icon"></i>
+          <a style="text-decoration: none;" href=""><p class="button">BOOKING</p></a>
+            </div>
+        </div>
+       </main>
+       <!-- Destinations -->
+        <main class="full-size dest-box">
+          <div class="full-size test-title  dest-title">
+            <i style="color: #5e17eb;" class="fa-solid fa-location-dot"></i>
+            <h1 style="color: #5e17eb;">Destinations</h1>
+          </div>
+          <div class="full-size dest-content">
+            <div class="dc-box bg-grad-col">
+              <div class="dcb-img">
+                <img id="paris-img" src="assets/paris.png" alt="">
+              </div>
+              <div class="dc-box-sec">
+                <div class="dcb-tittle">
+                  <h3>Paris, France</h3>
+                  <i class="fa-solid fa-plane-departure"></i>
+                </div>
+                <div class="dcb-info">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, exercitationem.</p>
+                </div>
+              </div>
+            </div>
+            <div class="dc-box bg-grad-col">
+              <div class="dcb-img">
+                <img id="london-img" src="assets/london.png" alt="">
+              </div>
+              <div class="dc-box-sec">
+                <div class="dcb-tittle">
+                  <h3>London, UK</h3>
+                  <i class="fa-solid fa-plane-departure"></i>
+                </div>
+                <div class="dcb-info">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, exercitationem.</p>
+                </div>
+              </div>
+            </div>
+            <div class="dc-box bg-grad-col">
+              <div class="dcb-img">
+                <img id="cox-img" src="assets/cox.png" alt="">
+              </div>
+              <div class="dc-box-sec">
+                <div class="dcb-tittle">
+                  <h3>Cox's Bazar, Bangladesh</h3>
+                  <i class="fa-solid fa-plane-departure"></i>
+                  <i class="fa-solid fa-bus-simple"></i>
+                  <i class="fa-solid fa-train-subway"></i>
+                </div>
+                <div class="dcb-info">
+                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi, exercitationem.</p>
+                </div>
+              </div>
+            </div>
+          <div class="full-size dest-btn">
+            <div class="button-bg">
+              <i class="fa-solid fa-circle-arrow-right button-icon"></i>
+              <a style="text-decoration: none;" href=""><p class="button">SEE MORE</p></a>
+                </div>
+          </div>
+        </main>
+       <!-- Testimonial -->
+        <main class="full-size test-box bg-grad-col">
+          <div class="full-size test-title">
+            <i class="fa-solid fa-user"></i>
+            <h1>Testimonials</h1>
+          </div>
+          <div class="full-size test-content">
+            <div id="test-1" class="tc-box">
+              <img id="timg-1" src="assets/testimonial/1.png" alt="">
+              <h3 id="ttitle-1">Jordana</h3>
+              <p id="tinfo-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil totam consequatur earum suscipit rerum nesciunt, tenetur, vitae distinctio temporibus veniam iste eius quis neque pariatur vel dolorem laboriosam, delectus sint.</p>
+            </div>
+            <div id="test-2" class="tc-box">
+              <img id="timg-2" src="assets/testimonial/2.png" alt="">
+              <h3 id="ttitle-2">John</h3>
+              <p id="tinfo-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil totam consequatur earum suscipit rerum nesciunt, tenetur, vitae distinctio temporibus veniam iste eius quis neque pariatur vel dolorem laboriosam, delectus sint.</p>
+            </div>
+            <div id="test-3" class="tc-box">
+              <img id="timg-3" src="assets/testimonial/3.png" alt="">
+              <h3 id="ttitle-3">Nikhil</h3>
+              <p id="tinfo-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil totam consequatur earum suscipit rerum nesciunt, tenetur, vitae distinctio temporibus veniam iste eius quis neque pariatur vel dolorem laboriosam, delectus sint.</p>
+            </div>
+          </div>
+          <div id="test-3" class="full-size test-btn">
+            <div class="button-bg">
+              <i class="fa-solid fa-circle-arrow-right button-icon"></i>
+              <a style="text-decoration: none;" href=""><p class="button">SEE MORE</p></a>
+                </div>
+          </div>
+        </main>
     <!-- JavaScript -->
      <script src="js/script.js"></script>
 </body>
