--- a/index.html
+++ b/index.html
@@ -26,15 +26,14 @@
         <div class="res-nav-list-box">
             <div class="nav-list-box">
               <div class="nav-list">
-                <a class="nav-btn" href="#home">HOME</a>
+                <a class="nav-btn" href="#head">HOME</a>
                 <a class="nav-btn" href="#destination">DESTINATIONS</a>
                 <a class="nav-btn" href="#gallery">GALLERY</a>
                 <a class="nav-btn" href="#packages">PACKAGES</a>
                 <a class="nav-btn" href="#book">BOOKING</a>
                 <a class="nav-btn" href="#testimonial">TESTIMONIAL</a>
-                <a class="nav-btn" href="#about">ABOUT</a>
                 <a class="nav-btn" href="#contact">CONTACT</a>
-                <a class="nav-btn" href="#faq">FAQ</a>
+                <a class="nav-btn" href="#about">ABOUT</a>
               </div>
             </div>
         </div>
@@ -44,7 +43,7 @@
         <div class="content-header">
           <h1 class="header-title">Travel Agency</h1>
           <p class="header-info">EXPLORE THE WORLD</p>
-            <div id="book-page" class="button-bg">
+            <div class="button-bg id-book-page">
           <i class="fa-solid fa-circle-arrow-right button-icon"></i>
           <a style="text-decoration: none;" href=""><p class="button">BOOKING</p></a>
             </div>
@@ -135,7 +134,7 @@
                 <img src="https://d1fegwn2wjh0cs.cloudfront.net/04-13-2023/t_7fd05ee79f17487e9336e1df86e0af90_name_7d1c824dcb934d64917642bcb9d38a77.jpeg" alt="">
                 <h3>Family Package</h3>
                 <img src="assets/30dis.png" alt="">
-                <div id="book-page" class="button-bg pc-btn">
+                <div class="button-bg pc-btn id-book-page">
                   <i class="fa-solid fa-circle-arrow-right button-icon"></i>
                   <a style="text-decoration: none;" href=""><p class="button">BOOKING</p></a>
                     </div>
@@ -144,7 +143,7 @@
                 <img src="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
                 <h3>Friends Package</h3>
                 <img src="assets/40dis.png" alt="">
-                <div id="book-page" class="button-bg pc-btn">
+                <div class="button-bg pc-btn id-book-page">
                   <i class="fa-solid fa-circle-arrow-right button-icon"></i>
                   <a style="text-decoration: none;" href=""><p class="button">BOOKING</p></a>
                     </div>
@@ -153,7 +152,7 @@
                 <img src="https://t3.ftcdn.net/jpg/06/30/32/74/360_F_630327455_w57niWJB9yFJepOXC7o4FjGmSboJSptC.jpg" alt="">
                 <h3>Couple Package</h3>
                 <img src="assets/50dis.png" alt="">
-                <div id="book-page" class="button-bg pc-btn pc-btn-3">
+                <div class="button-bg pc-btn pc-btn-3 id-book-page">
                   <i class="fa-solid fa-circle-arrow-right button-icon"></i>
                   <a style="text-decoration: none;" href=""><p class="button">BOOKING</p></a>
                     </div>
@@ -174,7 +173,7 @@
               <h3>Fly | Road | Rail</h3>
               <h6>Stay | Eat | Enjoy</h6>
               <div class="full-size book-btn">
-                <div id="book-page" class="button-bg">
+                <div class="button-bg id-book-page">
                   <i class="fa-solid fa-circle-arrow-right button-icon"></i>
                   <a style="text-decoration: none;"><p class="button">BOOKING</p></a>
                     </div>
@@ -267,6 +266,39 @@
             </div>
             </div>
          </main>
+         <!-- Footer -->
+          <footer class="full-size footer-sec">
+            <div class="foot-img-sec">
+              <img src="assets/fav.png" alt="">
+            </div>
+            <div class="foot-info-sec">
+              <div>
+                <h1>Travel Agency Project</h1>
+              </div>
+              <div>
+                <p>Group - 2</p>
+                <p>Niaz | Arfan | Delwar | Amir</p>
+              </div>
+            </div>
+            <div class="foot-btn-sec">
+              <div>
+                <a class="nav-btn" href="#head">HOME</a>
+              </div>
+              <div>
+                <a class="nav-btn" href="#destination">DESTINATIONS</a>
+                <a class="nav-btn" href="#gallery">GALLERY</a>
+              </div>
+              <div>
+                <a class="nav-btn" href="#packages">PACKAGES</a>
+                <a class="nav-btn" href="#book">BOOKING</a>
+              </div>
+              <div>
+                <a class="nav-btn" href="#testimonial">TESTIMONIAL</a>
+                <a class="nav-btn" href="#contact">CONTACT</a>
+                <a class="nav-btn" href="#about">ABOUT</a>
+              </div>
+            </div>
+          </footer>
          
     <!-- JavaScript -->
      <script src="js/script.js"></script>
